13-fargate-basics/applications/ns-ums/usermgmt-microservice-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usermgmt-microservice
  namespace: ns-ums
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-restapp
  template:
    metadata:
      labels:
        app: usermgmt-restapp
        runon: fargate
    spec:
      containers:
      - name: usermgmt-restapp-container
        image: kube-usermanagement-microservice:1.0.0
        resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"  
        ports:
          - containerPort: 8095 
        livenessProbe:
          exec:
            command:
              - '/bin/bash'
              - '-c' 
              - 'nc -z localhost 8095'
          initialDelaySeconds: 10   
        readinessProbe:
          httpGet:
            path: /usermgmt/health-status
            port: 8095
          initialDelaySeconds: 10
