13-fargate-basics/applications/ns-ums/mysql-externalName-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-externalName-service
  labels:
    runon: fargate
  namespace: ns-ums
spec:
  type: ExternalName
  externalName: usermgmtdb.cxojydmxwly6.ap-south-1.rds.amazonaws.com
